Actualización del pasatiempo1 y se añade contenido, estilos CSS e imágenes a pasatiempo2

--- a/Hugo-0699/pasatiemposmod/pagina1.html
+++ b/Hugo-0699/pasatiemposmod/pagina1.html
@@ -4,42 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 1</title>
+    <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="imagenes/iconoart.png" type="image/png">
 </head>
 <body>
     <header> 
-        <h1>Pasatiempo 1</h1>
+        <h1 id="titulo1">&star; El DIBUJO &star;</h1>
     </header>
     <hr>
     <main>
         <article>
-            <header>
-                <h2>EL DIBUJO &star;</h2>
-            </header>
             <p> Este es mi <strong>pasatiempo favorito</strong>. Literalmente llevo dibujando desde que era un niño y la verdad he mejorado bastante. Con el paso del tiempo <mark>(desde el 2009 al 2025),</mark> pasé de hacer garabatos irreconocibles a realizar trabajos de gran calidad que me han permitido vivir cientos de experiencias. Manejo diversos <b>estilos de dibujo</b>, aunque en el que más me especializo es en el estilo <i>manga/anime</i>. Además, realizo comisiones y tengo un proyecto personal en el que estoy haciendo un cómic, <em> soy el escritor, el ilustrador</em> y el que se encarga de toda la <em>dirección y organización del comic.</em></p>
 
-            <h4>A continuación, les mostrare unos de mis trabajos hechos por mi &hearts;</h4>
+            <h4>A continuación, les mostrare unos de mis trabajos hechos por mi &hearts;&hearts;</h4>
 
-            <figure>
-                <img width="290px" src="imagenes/mazinger1.jpg" alt="Dibujo de MazingerZ a color sobre hoja de papel craft">
-                <img width="300px" src="imagenes/makima1.jpg" alt="Dibujo de Makima (csm) hoja tomaño carta">
-                <img width="390px" src="imagenes/pintura1.jpg" alt="Pintura de un paisaje 40x30 usando acrilicos">
+            <figure class="centrarimg">
+                <img width="380px" src="imagenes/mazinger1.jpg" alt="Dibujo de MazingerZ a color sobre hoja de papel craft">
+                <img width="390px" src="imagenes/makima1.jpg" alt="Dibujo de Makima (csm) hoja tomaño carta">
+                <img width="400px" height="515px" src="imagenes/pintura1.jpg" alt="Pintura de un paisaje 40x30 usando acrilicos">
             </figure>
             <hr>
-            <h4>Descripción:</h4>
+            <h3>Descripción:</h3>
             <ul>
                 <li>El primer dibujo es de <span style="font-size: 25px;">MazingerZ</span>, un personaje de anime de los 90s. Pintado a color sobre una hoja de papel Craft. Tamaño 20x30.</li>
-                <li>El segundo dibujo es de <span style="font-size: 25px;">Makima</span>, un personaje del anime de Chainsaw Man. Dibujada con estilografos blanco y negro. Hoja tamaño Carta.</li>
+                <li>El segundo dibujo es de <span style="font-size: 25px;">Makima</span>, un personaje del anime de Chainsaw Man. Dibujada con estilografos a blanco y negro. Hoja tamaño Carta.</li>
                 <li>La tercer imagen es de una pintura sobre un <span style="font-size: 25px;"> Paisaje</span> haciendo uso de las pinturas acrilicas.Tamaño 40x30.</li>
             </ul>
-
         </article>
     </main>
     <hr>
-    <footer>
+    <footer class="copyright">
         <address>
             <h4>
-                Desarrollado por el alumno: Hugo Alejandro Zapata Rosales
+                &copy; Desarrollado por el alumno: Hugo Alejandro Zapata Rosales
             </h4>
         </address>
     </footer>
