--- a/Hugo-0699/pasatiemposmod/pasatiempo2.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo2.html
@@ -1,45 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 2</title>
-    <link rel="stylesheet" href="">     <!-- Estilos CSS proximamente -->
+    <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="imagenes/iconogames.png" type="image/png">
 </head>
 <body>
-<body>
     <header> 
-        <h1>LOS VIDEO-JUEGOS &star;&hearts;</h1>
+        <h1 id="titulo2">&star; LOS VIDEO-JUEGOS &star;</h1>
     </header>
     <hr>
     <main>
         <article>
             <header>
-                <h2> No son muchos, pero les presento...</h2>
+                <h2>Llegamos a otro pasatiempo muy bueno 😁🙌</h2>
             </header>
-            <p> </p>
+            <h3>Actualmente no poseo ninguna consola como una PlayStation o una Xbox, pero tengo una Nintendo Switch; además, tengo mi laptop con varios juegos que compré en la plataforma de Steam y otros que descargué de sitios externos. Entre todos los que tengo destacan:</h3>
 
-            <h4>A continuación, </h4>
+            <section class="contenedor-img">
+                <img width="300px" src="imagenes/batman2.jpg" alt="Un videojuego de Batman hecho por rokcsteady">
+                <dl>
+                    <dt>
+                       <strong>BATMAN ARKHAM ASYLUM</strong> 
+                    </dt>
+                    <dd>Es un videojuego de acción y aventura en el que tomamos el papel de Batman para frustrar los planes del Joker y sus villanos por tomar el control del psiquiátrico de Arkham. El juego tiene un sistema de combate cuerpo a cuerpo conocido como "Hakan slash" (la parte más adictiva del juego), posee distintos tipos de gadgets, modo sigilo, entre otros. El juego se destaca por su atmósfera oscura y con toques medio creppys, una jugabilidad que permite explorar la isla y combatir a enemigos usando el entorno, además de una narrativa original que ha sido elogiada por capturar la esencia de Batman. Es tan bueno que lo me acabé en la dificultad dificil como 5 veces al 100%.
+                    </dd>
+                    <hr>
+                    <dd>Sitio oficial para la descarga: <a href="">Batman Arkham Asylum para PC</a> </dd>
+                </dl>
+            </section>
 
-            <figure>
-                <img width="290px" src="" alt="">
-                <img width="300px" src="" alt="">
-                <img width="390px" src="" alt="">
-            </figure>
-            <hr>
-            <h4>Descripción:</h4>
-            
+            <section class="contenedor-img">
+                <img width="300px" src="imagenes/nnt2.jpg" alt="Un videojuego The Seven Deadly Sins para moviles hecho por Netmarble">
+                <dl>
+                    <dt>
+                        <strong>THE SEVEN DEADLY SINS: GRAND CROSS</strong>
+                    </dt>
+                    <dd>Es un RPG gacha por turnos que adapta fielmente el anime de The Seven Deadly Sins. Destaca por su sistema de combate estratégico con cartas, gráficos 3D, y una historia original que expande el universo del anime. Al principio no me gustaba el genero RPG porque no tenia mucho chiste, pero se volvío mi gusto culposo y es con el que más juego desde el 2021 hasta la actualidad.</dd>
+                    <hr>
+                    <dd>Sitio oficial para la descarga: <a href="https://7dsgc.netmarble.com/es/pcclient">7DS Grand Cross para PC</a> </dd>
+                </dl>
+            </section>
+
+            <section class="contenedor-img">
+                <img width="300px" src="imagenes/stevemc2.jpg" alt="Un videojuego de Minecraft para moviles hecho por MOJANG">
+                <dl>
+                    <dt>
+                        <strong>MINECRAFT</strong>
+                    </dt>
+                    <dd>Es un popular videojuego tipo "sandbox" donde los jugadores exploran un mundo de bloques, extraen recursos, construyen y combaten criaturas para sobrevivir o crear obras de arte. Su mecánica central permite total libertad para manipular un entorno generado al azar, ofreciendo modos de juego como el de supervivencia, que requiere fabricar herramientas y defenderse, y el creativo, que facilita la construcción de estructuras complejas. Un clasico.</dd>
+                    <dd>De hecho lo estoy jugando en un servidor con mis amigos llamado PlanetaLTI 3 y es aún más interesante, ya que le metimos mas 150 mods.</dd>
+                    <hr>
+                    <dd>Sitio oficial para la descarga: <a href="https://www.minecraft.net/es-es">Minecraft para PC</a> </dd>
+                </dl>
+            </section>
+
+            <section class="contenedor-img">
+                <img width="300px" src="imagenes/leftsito2.jpg" alt="L4D es un videojuego de consola hecho por Valve Corporation">
+                <dl>
+                    <dt>
+                        <strong>LEFT 4 DEAD</strong>
+                    </dt>
+                    <dd>Esta es una que todos se saben, el clasico de clasicos, <abbr title="L4D">Left 4 Dead</abbr> es un videojuego cooperativo multijugador de disparos en primera persona de acción y terror. Situada posteriormente a una pandemia apocalíptica, la trama del videojuego enfrenta a cuatro supervivientes. El juego relata la historia de los supervivientes en múltiples situaciones con una misma finalidad: Huir de la zona infectada con vida.</dd>
+                    <dd>El modo multijugador + un mod que permita a 8 jugadores dentro de un servidor lo hace 10 veces más divertido.</dd>
+                    <hr>
+                    <dd>Sitio oficial para la descarga: <a href="">L4D para PC</a> </dd>
+                </dl>
+            </section>
         </article>
     </main>
     <hr>
-
-    <aside></aside>
-
-    <footer>
+    <footer class="copyright">
         <address>
             <h4>
-                Desarrollado por el alumno: Hugo Alejandro Zapata Rosales
+                &copy; Desarrollado por el alumno: Hugo Alejandro Zapata Rosales
             </h4>
         </address>
     </footer>
