Conexión a estilos con CSS

--- a/victoriabalderas/pasatiemposver2/pagina2.html
+++ b/victoriabalderas/pasatiemposver2/pagina2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
+    <link rel="stylesheet" href="estilos.css">
+
     <title>Gustos musicales</title>
 
 </head>
