--- a/victoriabalderas/pasatiemposver2/pagina3.html
+++ b/victoriabalderas/pasatiemposver2/pagina3.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
+    <link rel="stylesheet" href="estilos.css">
+
     <title>Trabajo</title>
 
 </head>
@@ -38,7 +40,7 @@
             <header>
                 <h2>Actualidad</h2>
             </header>
-            <p>Actualmente estamos a un mes de cumplir 10 años en la industria, hemos llegado a distintos estados de la república, colegios y academias de danza. </p>
+            <p>Actualmente estamos a un mes de cumplir nuestro décimo aniversario y hemos llegado a distintas escuelas, academias de danza e incluso a otros estados de la república. Estamos muy orgullosas de lo que hemos crecido a lo largo de los últimos dos años.  </p>
         </section>
     </main>
 
