--- a/victoriabalderas/pasatiemposver2/pagina4.html
+++ b/victoriabalderas/pasatiemposver2/pagina4.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
+    <link rel="stylesheet" href="estilos.css">
+
     <title>Películas</title>
 
 </head>
@@ -28,11 +30,7 @@
             <header>
                 <h2>Mi top 5</h2>
             </header>
-            <p> 1. THUNDERBOLTS
-                2. 4 FANTÁSTICOS
-                3. CAPITÁN AMÉRICA: EL SOLDADO DEL INVIERNO
-                4. THOR RAGNAROK
-                5. AVENGERS: ERA DE ULTRÓN</p>
+            <p>Aunque me encanta todas las películas del universo cinematográfico de Marvel, tengo a mis preferidas, a continuación les presento mi top 5:</p>
         </section>
 
     </main>
