--- a/victoriabalderas/pasatiemposver2/pagina5.html
+++ b/victoriabalderas/pasatiemposver2/pagina5.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="uanl,facpya,lti">
     <meta name="author" content="vabg">
+    <link rel="stylesheet" href="estilos.css">
+
     <title>Encuesta</title>
 
 </head>
@@ -15,7 +17,7 @@
                 <a href="mainpasatiempos.html">Regresar a página principal</a>
             </ul>
         </nav>
-        <h1>Mis musicales de Broadway favoritos</h1></header>
+        <h1>Musicales de Broadway favoritos</h1></header>
     <main></main>
 
     <aside></aside>
