Finalizar el trabajo

--- a/KingBootleg/PasatiemposVer2/dormir.html
+++ b/KingBootleg/PasatiemposVer2/dormir.html
@@ -8,5 +8,7 @@
 <body style="background-color: black; text-align: center;">
     <img src="https://c.tenor.com/TE_jqQ1HW50AAAAd/tenor.gif" alt="perro dormido" style="width: 30%; height: 30%;">
     <audio src="chiste.mp3" autoplay loop controls></audio>
+    <button onclick="window.location.href='index.html'">⬅️ Regresar</button>
+
 </body>
 </html>
