--- a/KingBootleg/PasatiemposVer2/juegos.html
+++ b/KingBootleg/PasatiemposVer2/juegos.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Videojuegos</title>
 </head>
 <body>
     <h1>Los videojuegos</h1>
-    <p>A mi me encanta mucho jugar videojuegos, lo encuentro relajante y mi pasatiempo preferido</p>
+    <h2>A mi me encanta mucho jugar videojuegos, lo encuentro relajante y mi pasatiempo preferido</h2>
     <p> aqui una lista de mis generos preferidos</p>
 
     <ul>
@@ -27,5 +28,6 @@
         <li>Un ejemplo: <b>Marvel rivals</b></li>
         <img src="https://c.tenor.com/RrPvHCqX0s8AAAAd/tenor.gif" width="300" alt="marvelrivales">
     </ul>
+    <button onclick="window.location.href='index.html'">⬅️ Regresar</button>
 </body>
 </html>
