--- a/KingBootleg/PasatiemposVer2/mangacomic.html
+++ b/KingBootleg/PasatiemposVer2/mangacomic.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Mangas o Comics</title>
 </head>
 <body>
-    
+    <h1>Mangas o comics</h1>
+    <p>Un pasatiempo que me agrada es el poder leer mangas o comics, aqui algunos ejemlos de mis favoritos</p>
+
+    <ul>Algunos ejemplos serian:</ul>
+    <li><b>All star superman</b></li>
+    <img src="https://m.media-amazon.com/images/I/81UsnOXb5zL.jpg" width="350" height="350">
+
+    <li><b>Dragon Ball (mi favorito) ^u^</b></li>
+    <img src="https://cdnx.jumpseller.com/neotokyo3-store/image/65682330/resize/610/610?1753473801" alt="DragonBall cover24" width="350" height="350">
+
+    <li><B>JoJo's Bizzare Adventure</B></li>
+    <img src="https://images.squarespace-cdn.com/content/v1/571abd61e3214001fb3b9966/9eca6079-b592-4101-8c55-bbf3daa1b2fe/jojo.jpg" alt="Jojos" width="250" height="350">
+
+    <button onclick="window.location.href='index.html'">⬅️ Regresar</button>
 </body>
 </html>
