--- a/KingBootleg/index.html
+++ b/KingBootleg/index.html
@@ -19,7 +19,7 @@
         <h1>Practica 2</h1>
         <h1>Crear la pagina donde subiremos todas las evidencias</h1>
         <p>Ahora aqui es donde se subiran las evidencias</p>
-        <a href="https://github.com/FDW52AD2025/website52/commit/442e33d08dcbcb7d4fed1fcde2fcde5b99a070f1">Link del commit</a>
+        <a href="https://github.com/FDW52AD2025/website52/commit/442e33d08dcbcb7d4fed1fcde2fcde5b99a070f1">Link del commit del 27 de agosto</a>
     </main>
     <aside></aside>
     <footer></footer>
