--- a/ernesgarcia06/pasatiemposver2/pagina3.html
+++ b/ernesgarcia06/pasatiemposver2/pagina3.html
@@ -20,12 +20,13 @@
                     <p>En cuanto a la música no me gusta un género en especial, tengo gustos variados y dependiendo el momento y como me sienta es el tipo de música que escucho, me gusta la banda, los corridos, el pop y algo de reggaeton.</p>
                     <p>Principalmente me gusta escuchar música mientras hago tarea o cuando tengo tiempo libre.</p>
                     <div class="imagenes">
-                        <img src="img/musica.jpg" alt="Persona escuchando música">
+                        <img src="img/musica.jpg" alt="Persona eligiendo música">
                         <p><small>Persona eligiendo música</small></p>
                     </div>
                 </header>
             </section>  
           </article>
+    </main>
     <nav>
         <ul>
             <p>Esta canción me gusta mucho ya que desde que empece a ir al estadio de béisbol conoci esta canción ya que es la Walk Up Song de <i>Ramiro Peña</i> y desde ahi me empezó a gustar y ahora la tengo muy relacionada con el béisbol mexicano.</p>
