--- a/ernesgarcia06/pasatiemposver2/pagina5.html
+++ b/ernesgarcia06/pasatiemposver2/pagina5.html
@@ -10,6 +10,22 @@
 <body class="fondos">
     <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
 
-    
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <nav>
+        <div class="imagenes">
+            <ul>
+                <video controls width="400" src="https://www.pexels.com/es-es/download/video/2430839/"></video>
+            </ul>
+        </div>
+    </nav>
+    <aside></aside>
+    <footer>
+       <address>&copy;Desarrollado por Luis Ernesto  Guzmán García</address> 
+    </footer>
 </body>
 </html>
