--- a/oswtobias06/pasatiempos2/index.html
+++ b/oswtobias06/pasatiempos2/index.html
@@ -19,7 +19,7 @@
         <li><a href="pag2.html"> Musica</a></li>
         <li><a href="pag3.html"> Deportes</a></li>
         <li><a href="pag4.html"> Coleccion</a></li>
-        <li><a href="pag5.html"> Archivos relacionados</a></li>
+        <li><a href="pag5.html"> Información extra</a></li>
     </nav>
     <aside>
         <p><b>CONTENIDO</b></p>
@@ -27,8 +27,14 @@
         <li> Musica </li>
         <li> Deportes </li>
         <li> Coleccion </li>
-        <li> Archivos </li>
+        <li> Info </li>
     </aside>
-    <footer></footer>
+    <footer>
+        <br>
+        <address>
+            <p>&copy; Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>Ciudad General Escobedo, Nuevo León</p>
+        </address>
+    </footer>
 </body>
 </html>
