--- a/oswtobias06/pasatiempos2/pag5.html
+++ b/oswtobias06/pasatiempos2/pag5.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <b class="back">
+       <a href="index.html">Volver a página principal</a>
+    </b>
     <header>
         <h1>Información extra</h1>
     </header>
@@ -96,6 +99,8 @@
 
             <label for="Coleccion">Coleccion</label>
             <input placeholder="que podria coleccionar" type="text" name="Coleccion" id="coleccionar">
+
+            <button type="submit">Enviar</button>
         </form>
     </main>
     <aside>
@@ -109,13 +114,10 @@
     <footer>
         <br>
         <address>
-            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>&copy; Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
         <br>
-        <b>
-            <a href="index.html">Volver a página principal</a>
-        </b>
     </footer>
 </body>
 </html>
