--- a/oswtobias06/pasatiempos2/pag1.html
+++ b/oswtobias06/pasatiempos2/pag1.html
@@ -8,6 +8,9 @@
 
 </head>
 <body>
+    <b class="back">
+       <a href="index.html">Volver a página principal</a>
+    </b>
     <header>
         <h1>Cine</h1>
     </header>
@@ -23,18 +26,15 @@
         <li> Musica </li>
         <li> Deportes </li>
         <li> Coleccion </li>
-        <li> Archivos </li>
+        <li> Info </li>
     </aside>
     <br>
     <footer>
         <address>
-            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>&copy; Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
         <br>
-        <b>
-            <a href="index.html">Volver a página principal</a>
-        </b>
     </footer>
 </body>
 </html>
