--- a/oswtobias06/pasatiempos2/pag2.html
+++ b/oswtobias06/pasatiempos2/pag2.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <b class="back">
+       <a href="index.html">Volver a página principal</a>
+    </b>
     <header>
         <h1>Música</h1>
     </header>
@@ -14,7 +17,7 @@
         <h3> Escuchar música</h3>
         <p>Cuando hago tarea, voy de camino y regreso a lugares durante el trayecto, o solo para matar tiempo, me gusta poner musica para hacerlo mas llevadero. Principalmente trap, hip-hop y sus derivados, tambien algunos de banda.</p>        
         <img width="500" src="files/musica.jpg" alt="series" srcset="">
-        <audio controls src="files/btstoris.mp3"></audio>
+        <audio class="audio" controls src="files/btstoris.mp3"></audio>
     </main>
     <aside>
         <p><b>CONTENIDO</b></p>
@@ -22,18 +25,15 @@
         <li> Musica </li>
         <li> Deportes </li>
         <li> Coleccion </li>
-        <li> Archivos </li>
+        <li> Info </li>
     </aside>
     <footer>
         <br>
         <address>
-            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>&copy; Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
         <br>
-        <b>
-            <a href="index.html">Volver a página principal</a>
-        </b>
     </footer>
 </body>
 </html>
