--- a/oswtobias06/pasatiempos2/pag3.html
+++ b/oswtobias06/pasatiempos2/pag3.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <b class="back">
+       <a href="index.html">Volver a página principal</a>
+    </b>
     <header>
         <h1>Deportes</h1>
     </header>
@@ -21,18 +24,15 @@
         <li> Musica </li>
         <li> Deportes </li>
         <li> Coleccion </li>
-        <li> Archivos </li>
+        <li> Info </li>
     </aside>
     <footer>
         <br>
         <address>
-            <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
+            <p>&copy; Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
         <br>
-        <b>
-            <a href="index.html">Volver a página principal</a>
-        </b>
     </footer>
 </body>
 </html>
