--- a/ernesgarcia06/pasatiemposver2/pagina5.html
+++ b/ernesgarcia06/pasatiemposver2/pagina5.html
@@ -11,12 +11,63 @@
     <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
 
     <header>
-
+        <h1 class="titulos">⚽ Acompañame al estadio 🏟️</h1>
     </header>
     <main>
+        <table border="1px">
+            <thead>
+                <tr>
+                    <th colspan="4">Cosas que puedes hacer en el Estadio </th>
+                </tr>
+                <tr>
+                    <th>Estadio</th>
+                    <th>Disfrutar</th>
+                    <th>Comer</th>
+                    <th>Ver ganar al equipo </th>
+                </tr>
+                <tr>
+                    <th>Estadio Universitario</th>
+                    <th>✅</th>
+                    <th>✅</th>
+                    <th>✅</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>WALMART PARK</th>
+                    <th>✅</th>
+                    <th>✅</th>
+                    <th>✅</th>
+                </tr>
+            </tbody>
+        </table>
+        <div class="imagenes">
+            <p><span style="font-size: 25px;">¿Ahora que sabes esto, quisieras acompañarme al estadio?</span></p>
+        </div>
+
+        <p>Si gustas acompañarme, puedes dejar aqui tus datos para contactarte.</p>
+        <form action="">
+            <label for="nombre">Nombre:</label>
+            <input placeholder="Ingrese su nombre aqui" type="text" name="nombre" id="nombre">
+
+            <label for="edad">Edad:</label>
+            <input type="number" name="edad" id="edad">
+
+            <label for="telefono">Teléfono: </label>
+            <input type="tel" name="telefono" id="telefono">
+
+            <label for="estadio">¿Estadio al que quisieras ir?: </label>
+            <select name="estadio" id="estadio">
+                <option value="1">WALMART PARK</option>
+                <option value="4">Estadio Universitario</option>
+            </select>
+
+            <input type="button" value="Enviar">
+        </form>
 
     </main>
     <nav>
+        <p><i>Te espero en el estadio, saludos</i>.</p>
         <div class="imagenes">
             <ul>
                 <video controls width="400" src="https://www.pexels.com/es-es/download/video/2430839/"></video>
@@ -25,7 +76,8 @@
     </nav>
     <aside></aside>
     <footer>
-       <address>&copy;Desarrollado por Luis Ernesto  Guzmán García</address> 
+        <address>Muchas gracias por tomarte el tiempo de llegar hasta aca y leer esta página.</address>
+        <address>&copy;Desarrollado por Luis Ernesto  Guzmán García</address> 
     </footer>
 </body>
 </html>
