--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -38,7 +38,7 @@
             <ul>
                 <li><a href="pasatiemposver2/index.html" target="_blank">Link Práctica 3</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-27&until=2025-08-27" target="_blank">Link Commits 27 Agosto</a></li>
-                <li><a href="" target="_blank">Link Commits 27 a 29 Agosto</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-08-27&until=2025-08-29" target="_blank">Link Commits 27 a 29 Agosto</a></li>
             </ul>
         </nav>
     </main>
