Pasatiempo 3 de series y peliculas terminado, modificación de index central y estilos

--- a/aLe.php27/pasatiempos_v2/index.html
+++ b/aLe.php27/pasatiempos_v2/index.html
@@ -12,8 +12,8 @@
     <audio src="balatromaintheme.mp3" autoplay loop></audio>
 </head>
 <body class="bodyindex">
-    <header>
-        <h1 class="h1headerindex">Mis pasatiempos</h1>
+    <header class="headerindex">
+        <h1>Mis pasatiempos</h1>
     </header>
     <main>
         <ul class="ulindex">
