--- a/Marikve7/pasatiempos2/index2.html
+++ b/Marikve7/pasatiempos2/index2.html
@@ -35,7 +35,12 @@
         </section>
 
     </main>
-    <aside></aside>
-    <footer></footer>
+
+    <footer>
+        <address>
+            <p>© Desarrollado por IMJG</p>
+        </address>
+    </footer>
+
 </body>
 </html>
