--- a/IlseOjeda/pasatiemposv2/cocinar.html
+++ b/IlseOjeda/pasatiemposv2/cocinar.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <audio src="fondopostres.mp3" controls loop autoplay></audio>
+  <audio src="mp3/fondopostres.mp3" controls loop autoplay></audio>
   <header>
     <h1>Cocinar Postres</h1>
   </header>
@@ -21,10 +21,10 @@
         <img src="img/postre1.jpg" alt="">
         <p>Una de mis recetas favoritas es el <strong>postre frio de limón</strong>, el cual aprendí gracias a un video de YouTube. 
         </p>
-        <video controls width="400" src="postre.mp4"></video>
+        <video controls width="400" src="mp4/postre.mp4"></video>
         <table border="1" cellpadding="10" cellspacing="0">
         <tr>
-          <th colspan="2">Beneficios de cocinar como pasatiempo</th>
+          <th colspan="2"><mark>Beneficios de cocinar como pasatiempo</mark></th>
         </tr>
         <tr>
           <td><b>Creatividad y aprendizaje</b></td>
