--- a/IlseOjeda/pasatiemposv2/index.html
+++ b/IlseOjeda/pasatiemposv2/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Pasatiempos Favoritos</h1>
-        <p><small>Versión 2 - Práctica 3</small></p>
+        <p><small>Versión 2<sup>a</sup> - Práctica 3</small></p>
         <nav>
             <ul>
                 <li><a href="cocinar.html">Cocinar</a></li>
