--- a/oswtobias06/pasatiempos2/pag4.html
+++ b/oswtobias06/pasatiempos2/pag4.html
@@ -16,7 +16,9 @@
     <main class="parraf">
         <h3> Armar figuras Magic block</h3>
         <p>Estas figuras son personajes famosos armables con bloques parecidos a legos, y es muy entretenido estar ahi armandolos, personalmente me gusta mucho armarlos y coleccionarlos, actualmente cuento con 3 figuritas que son bob esponja, hulk y shadow.</p>
-        <img width="500" src="files/magicblock.jpg" alt="magicblock" srcset="">
+        <img width="300" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwJ6i8eist8Y6d_uGR8-owu5WgzDNmnog6LQ&s" alt="magicblock" srcset="">
+        <img width="300" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvjQJRj2oWdzcIjLxCSmwToodYphkmCzaUGg&s" alt="magicblock" srcset="">
+        <img width="300" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdSaY0mUBbyVPfMSW86vbipmz_pwde5x9vdUb36y4eRMaTUpt6R4akQJNo3n_0j-ih25s&usqp=CAU" alt="magicblock" srcset="">
     </main>
     <aside>
         <p><b>CONTENIDO</b></p>
