--- a/oswtobias06/pasatiempos2/pag1.html
+++ b/oswtobias06/pasatiempos2/pag1.html
@@ -18,7 +18,8 @@
         <h3> Ver peliculas o series</h3>
         <p>En las noches cuando tengo tiempo libre, suelo ver algun tipo de contenido de esto, ahorita estoy viendo Solar Opposities, una serie que me encanta por el humor que maneja.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/TU81l-n7nc0?si=1IfZd5UcUNDEsGfB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+        <p>Mientras tanto en peliculas, mi favorita puede ser Inception por su forma de contar la historia y la ciencia ficcion que maneja en ese mundo</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/OCEkhKvm-hU?si=AgRZOHF_UPfJJ8t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>s
     </main>
     <aside>
         <p><b>CONTENIDO</b></p>
