--- a/oswtobias06/pasatiempos2/pag2.html
+++ b/oswtobias06/pasatiempos2/pag2.html
@@ -15,9 +15,16 @@
     </header>
     <main class="parraf">
         <h3> Escuchar música</h3>
-        <p>Cuando hago tarea, voy de camino y regreso a lugares durante el trayecto, o solo para matar tiempo, me gusta poner musica para hacerlo mas llevadero. Principalmente trap, hip-hop y sus derivados, tambien algunos de banda.</p>        
+        <p>Cuando hago tarea, voy de camino y regreso a lugares durante el trayecto, o solo para matar tiempo, me gusta poner musica para hacerlo mas llevadero. Principalmente trap, hip-hop y sus derivados, tambien algunos de banda o mexicana.</p>        
         <img width="500" src="files/musica.jpg" alt="series" srcset="">
+        <p>Trap</p>
         <audio class="audio" controls src="files/btstoris.mp3"></audio>
+        <p>Hip-hop</p>
+        <audio class="audio" controls src="files/BURN.mp3"></audio>
+        <p>Urbano</p>
+        <audio class="audio" controls src="files/DÁKITI.mp3"></audio>
+        <p>Mexicano</p>
+        <audio class="audio" controls src="files/bbdame.mp3"></audio>
     </main>
     <aside>
         <p><b>CONTENIDO</b></p>
