--- a/IlseOjeda/pasatiemposv2/index.html
+++ b/IlseOjeda/pasatiemposv2/index.html
@@ -28,10 +28,10 @@
         <p>Cada sección contiene información específica sobre el pasatiempo seleccionado.</p>
         <br>
     </main>
-    <footer>
-        <p>Desarrollado por Ilse Ojeda
-        <img src="img/logo.png" alt="Logo" class="logo-footer">
-        </p>
-    </footer>
+<footer>
+    <p>Desarrollado por <span class="nombre">Ilse Ojeda</span>
+    <img src="img/logo.png" alt="Logo" class="logo-footer">
+    </p>
+</footer>
 </body>
 </html>
