Avance de pagina pasatiempo 1

--- a/atchz/pasatiempos2/pasatiempo1.html
+++ b/atchz/pasatiempos2/pasatiempo1.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pasatiempo 1</title>
-  </head>
-  <body></body>
+<html lang="es-MX">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="atchz" />
+        <meta
+            name="description"
+            content="Pagina general para enlaces de pasatiempos"
+        />
+        <meta name="keywords" content="uanl,facpya,lti" />
+        <title>Pasatiempo 1</title>
+    </head>
+    <body>
+        <header>
+            <h1>Primer pasatiempo</h1>
+        </header>
+        <main>
+            <article>
+                <header><h2>Jugar videojuegos</h2></header>
+
+                <p>
+                    Los videojuegos son uno de mis pasatiempos favoritos para
+                    pasar el tiempo. Me permiten socializar con mis amigos y
+                    divertirnos juntos, especialmente cuando no sabemos que más
+                    hacer. Además de entretenernos, nos ayuda a mantenernos por
+                    decirlo de alguna manera conectados ya que podemos compartir
+                    más momentos.
+                </p>
+                <img
+                    src="https://images.pexels.com/photos/1637436/pexels-photo-1637436.jpeg"
+                    alt="mando de consola NES"
+                    width="300px"
+                />
+
+                <section>
+                    <header>
+                        <h3>Algunos de mis juegos favoritos son:</h3>
+                    </header>
+
+                    <ul>
+                        <li>Hollow Knight</li>
+                        <li>Super Mario 64</li>
+                        <li>The Binding of Isaac</li>
+                        <li>The Legend of Zelda: Majora's Mask</li>
+                    </ul>
+                </section>
+
+                <footer>
+                    <p>Imagen de referencia obtenida de Pexels</p>
+                </footer>
+            </article>
+        </main>
+        <aside></aside>
+        <footer></footer>
+    </body>
 </html>
