finalizacion de la pagina personal, la principal y las 5 subpaginas

--- a/luca384/HobbiesVer2/hobbie1.html
+++ b/luca384/HobbiesVer2/hobbie1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 style="color: rgb(189, 188, 188); background-color: rgb(162, 25, 25); border: rgb(249, 249, 16) 5px solid">HOBBIE 1</h1>
+        <h1 style="color: rgb(189, 188, 188); background-color: rgb(162, 25, 25); border: rgb(249, 249, 16) 5px solid; padding: 15px;">HOBBIE 1</h1>
     </header>
     <main>
     <section>    
@@ -23,15 +23,19 @@
             <p>Mis animes personales favoritos son:</p>
             <p>1. JoJo's Bizarre Adventure</p>
             <p>Una serie que sigue a la familia Joestar a través de generaciones, donde cada heredero enfrenta amenazas sobrenaturales con habilidades únicas llamadas Stands. Famosa por su estilo exagerado, poses dramáticas y combates creativos.</p>
-            <img src= "imagenes/jojos.jpg" alt="Imagen de videojuegos" width="450px">
+            <img src= "imagenes/jojos.jpg" alt="Imagen de anime" width="450px">
 
             <p>2. Black Clover</p> 
             <p>Sigue la historia de Asta, un joven sin magia en un mundo donde todos la tienen. A pesar de ello, busca convertirse en el Rey Mago, enfrentando poderosos enemigos con pura determinación y una espada anti-magia. Acción, amistad y magia en un mundo fantástico.</p>
-            <img src="imagenes/black_clover.jpg" alt="Imagen de videojuegos" width="300px">
+            <img src="imagenes/black_clover.jpg" alt="Imagen de anime" width="300px">
 
             <p>3. Blue Lock</p>
             <p>Un anime deportivo centrado en el fútbol. Tras el fracaso de Japón en el Mundial, se lanza un programa extremo para crear al delantero más egoísta y efectivo del país. Yoichi Isagi y otros jóvenes compiten en intensos desafíos psicológicos y físicos para destacar.</p>
-            <img src="imagenes/blue_lock.jpg" alt="Imagen de videojuegos" width="450px"> 
+            <img src="imagenes/blue_lock.jpg" alt="Imagen de anime" width="450px"> 
+
+            <ul>
+                <li><a href="index.html">Pagina Principal</a></li>
+            </ul>
 
         </article>
 </body>
