--- a/luca384/HobbiesVer2/hobbie4.html
+++ b/luca384/HobbiesVer2/hobbie4.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 style="color: white; background-color: red">HOBBIE 4</h1>
+        <h1 style="color: white; background-color: red; padding: 15px;">HOBBIE 4</h1>
     </header>
     <main>
     <section>    
@@ -23,6 +23,10 @@
             <p></p>
             
             <iframe width="560" height="315" src="https://www.youtube.com/embed/KqUkMewX6qA?si=jZDdEr_4FsbyDyXy" title="Truco con cartas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <ul>
+                <li><a href="index.html">Pagina Principal</a></li>
+            </ul>
 
         </article>
 </body>
