--- a/luca384/HobbiesVer2/hobbie5.html
+++ b/luca384/HobbiesVer2/hobbie5.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Clase html, css">
     <meta name="author" content="LRTS">
     <link rel="stylesheet" href="styles.css">
-    <title>Hobbie 3</title>
+    <title>Hobbie 5</title>
 </head>
 <body>
     <header>
-        <h1 style="color: white; background-color: orange">HOBBIE 5</h1>
+        <h1 style="color: white; background-color: orange; padding: 15px;">HOBBIE 5</h1>
     </header>
     <main>
     <section>    
@@ -36,6 +36,10 @@
             <p>Un metroidvania con toques de soulslike, ambientado en un mundo sombrío inspirado en el arte y la religión española. Combina acción brutal, escenarios inquietantes y una atmósfera cargada de penitencia y sufrimiento.</p>
 
             <img src="imagenes/blasphemous.jpg" alt="Imagen de videojuegos" width="350px"> 
+
+            <ul>
+                <li><a href="index.html">Pagina Principal</a></li>
+            </ul>
 
         </article>
 </body>
