--- a/luca384/HobbiesVer2/hobbie2.html
+++ b/luca384/HobbiesVer2/hobbie2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1 style="color: white; background-color: rgb(1, 105, 224)">HOBBIE 2</h1>
+        <h1 style="color: white; background-color: rgb(1, 105, 224); padding: 15px;">HOBBIE 2</h1>
     </header>
     <main>
     <section>    
@@ -23,15 +23,19 @@
             <p>Entonces estas son mis 3 canciones favoritas</p>
             <p>1. All night radio - Ado</p>
 
-            <img src= "imagenes/Ado.jpg" alt="Imagen de videojuegos" width="350px">
+            <img src= "imagenes/Ado.jpg" alt="Imagen de musica" width="350px">
 
             <p>2. Otome no Bigaku - Atarashii Gakko</p> 
 
-            <img src="imagenes/ag.jpg" alt="Imagen de videojuegos" width="350px">
+            <img src="imagenes/ag.jpg" alt="Imagen de musica" width="350px">
 
             <p>3. Cant Stop - Red Hot Chili Peppers</p>
 
-            <img src="imagenes/RHCP.jpg" alt="Imagen de videojuegos" width="350px"> 
+            <img src="imagenes/RHCP.jpg" alt="Imagen de musica" width="350px"> 
+
+            <ul>
+                <li><a href="index.html">Pagina Principal</a></li>
+            </ul>
 
         </article>
 </body>
