--- a/luca384/HobbiesVer2/hobbie3.html
+++ b/luca384/HobbiesVer2/hobbie3.html
@@ -7,10 +7,21 @@
     <meta name="author" content="LRTS">
     <link rel="stylesheet" href="styles.css">
     <title>Hobbie 3</title>
+
+    <style>
+        table,th,td{
+            border: 5px solid black;
+            border-collapse: collapse;
+        }
+        th, td{
+            padding: 10px;
+        }
+    </style>
+
 </head>
 <body>
     <header>
-        <h1 style="color: white; background-color: rgb(48, 48, 48)">HOBBIE 3</h1>
+        <h1 style="color: white; background-color: rgb(48, 48, 48); padding: 15px;">HOBBIE 3</h1>
     </header>
     <main>
     <section>    
@@ -21,17 +32,39 @@
             <p>Las películas también ayudan a disfrutar y relajarse porque permiten desconectarte de la rutina y entrar en otras historias. Al ver una buena película no solo pasas el tiempo, también puedes reflexionar, inspirarte o simplemente divertirte. Cada una transmite emociones distintas, algunas te hacen reír, otras te hacen pensar y otras solo te dejan disfrutar el momento. En cierto sentido, es como darle una pausa a la vida cotidiana para ver las cosas desde otra perspectiva.</p>
 
             <p>Entonces estas son mis 3 peliculas preferidas</p>
-            <p>1. Wiplash</p>
 
-            <img src= "imagenes/wiphash.jpg" alt="Imagen de videojuegos" width="350px">
+                <table>
+                    <tr>
+                        <th>Pelicula</th>
+                         <th>Genero</th>
+                         <th>Director</th>
+                         <th>Poster</th>
+                    </tr>
+                    <tr>
+                        <td>Whiplash</td>
+                        <td>Drama</td>
+                        <td>Damien Chazelle</td>
+                        <td><img src="imagenes/wiphash.jpg" alt="imagen del pelicula" width="300px"></td>
+                    </tr>
 
-            <p>2. El Abogado Del Diablo</p> 
+                    <tr>
+                        <td>El Abogado del Diablo</td>
+                        <td>Thriller psicológico</td>
+                        <td>Taylor Hackford</td>
+                        <td><img src="imagenes/abogado.jpg" alt="imagen del pelicula" width="250px"></td>
+                    </tr>
 
-            <img src="imagenes/abogado.jpg" alt="Imagen de videojuegos" width="350px">
+                    <tr>
+                        <td>Shrek</td>
+                        <td>Comedia</td>
+                        <td>Andrew Adamson</td>
+                        <td><img src="imagenes/shrek.jpg" alt="imagen del pelicula" width="300px"></td>
+                    </tr>
+                </table>
 
-            <p>3. Sherk</p>
-
-            <img src="imagenes/shrek.jpg" alt="Imagen de videojuegos" width="350px"> 
+            <ul>
+                <li><a href="index.html">Pagina Principal</a></li>
+            </ul>
 
         </article>
 </body>
