--- a/IlseOjeda/pasatiemposv2/gatos.html
+++ b/IlseOjeda/pasatiemposv2/gatos.html
@@ -9,7 +9,7 @@
 <body>
   <audio src="mp3/fondogatos.mp3" controls loop autoplay></audio>
   <header>
-    <h1>Pasar el tiempo con gatos</h1>
+    <h1>Pasar el Tiempo con Gatos</h1>
   </header>
   <main>
     <article>
