--- a/IlseOjeda/pasatiemposv2/terror.html
+++ b/IlseOjeda/pasatiemposv2/terror.html
@@ -9,7 +9,7 @@
 <body>
   <audio src="mp3/fondoterror.mp3" controls loop autoplay></audio>
   <header>
-    <h1>Ver series y películas de terror</h1>
+    <h1>Ver Series y Películas de Terror</h1>
   </header>
   <main>
     <article>
