--- a/atchz/pasatiempos2/pasatiempo1.html
+++ b/atchz/pasatiempos2/pasatiempo1.html
@@ -39,19 +39,112 @@
                     </header>
 
                     <ul>
-                        <li>Hollow Knight</li>
-                        <li>Super Mario 64</li>
-                        <li>The Binding of Isaac</li>
-                        <li>The Legend of Zelda: Majora's Mask</li>
+                        <li lang="en">Hollow Knight</li>
+                        <li lang="en">Super Mario 64</li>
+                        <li lang="en">The Binding of Isaac</li>
+                        <li lang="en">The Legend of Zelda: Majora's Mask</li>
                     </ul>
                 </section>
 
-                <footer>
-                    <p>Imagen de referencia obtenida de Pexels</p>
-                </footer>
+                <p>
+                    De estos 4, mi favorito es sin duda alguna
+                    <mark> <span lang="en">Hollow Knight</span></mark
+                    >, ya que me tranquiliza, me relaja y sobretodo, me
+                    entretiene.
+                </p>
+
+                <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/UAO2urG23S4?si=CuTltjHoNVuOmaJc"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                ></iframe>
+
+                <h4>Menciona tu videojuego favorito:</h4>
+
+                <form action="#" method="post">
+                    <label for="juego">Nombre del juego:</label>
+                    <input
+                        type="text"
+                        id="juego"
+                        name="juego"
+                        placeholder="Escribe tu juego favorito"
+                        required
+                    />
+                    <br /><br />
+
+                    <label for="plataforma">Plataforma:</label>
+                    <select id="plataforma" name="plataforma">
+                        <option value="pc">PC</option>
+                        <option value="switch">Nintendo Switch</option>
+                        <option value="playstation">PlayStation</option>
+                        <option value="xbox">Xbox</option>
+                        <option value="otro">Otro</option>
+                    </select>
+                    <br /><br />
+
+                    <label for="rol">Genero del videojuego:</label>
+                    <select id="rol" name="rol">
+                        <option value="aventura">Aventura</option>
+                        <option value="accion">Acción</option>
+                        <option value="estrategia">Estrategia</option>
+                        <option value="rol">Rol</option>
+                        <option value="multijugador">Multijugador</option>
+                    </select>
+                    <br /><br />
+
+                    <button type="submit">Enviar</button>
+                </form>
+
+                <footer></footer>
             </article>
         </main>
-        <aside></aside>
-        <footer></footer>
+        <aside>
+            <h4>Links para revisar los videojuegos mencionados</h4>
+            <nav>
+                <ul>
+                    <li lang="en">
+                        <a
+                            target="_blank"
+                            href="https://store.steampowered.com/app/367520/Hollow_Knight/"
+                            >Hollow Knight</a
+                        >
+                    </li>
+                    <li lang="en">
+                        <a
+                            target="_blank"
+                            href="https://www.nintendo.com/es-es/Juegos/Nintendo-64/Super-Mario-64-269745.html"
+                            >Super Mario 64</a
+                        >
+                    </li>
+                    <li lang="en">
+                        <a
+                            target="_blank"
+                            href="https://store.steampowered.com/app/250900/The_Binding_of_Isaac_Rebirth/"
+                            >The Binding of Isaac</a
+                        >
+                    </li>
+                    <li lang="en">
+                        <a
+                            target="_blank"
+                            href="https://www.nintendo.com/es-es/Juegos/Nintendo-64/The-Legend-of-Zelda-Majora-s-Mask-269525.html"
+                            >The Legend of Zelda: Majora's Mask</a
+                        >
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <footer>
+            <p>
+                <abbr title="Universidad Autónoma de Nuevo León">UANL</abbr> -
+                <abbr title="Facultad de Contaduría Pública y Administración"
+                    >FACPYA</abbr
+                >
+            </p>
+        </footer>
     </body>
 </html>
