Correcion de descripcion de meta

--- a/atchz/pasatiempos2/pasatiempo1.html
+++ b/atchz/pasatiempos2/pasatiempo1.html
@@ -4,10 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="atchz" />
-        <meta
-            name="description"
-            content="Pagina general para enlaces de pasatiempos"
-        />
+        <meta name="description" content="Pagina sobre mi primer pasatiempo" />
         <meta name="keywords" content="uanl,facpya,lti" />
         <title>Pasatiempo 1</title>
     </head>
