Agregue 1 pasatiempo mas, me resta solo 1

--- a/TheRafaMan06/pasatiemposver2/pasatiempo1.html
+++ b/TheRafaMan06/pasatiemposver2/pasatiempo1.html
@@ -64,7 +64,7 @@
             <div class="deporte-contenido">
                 <div class="contenedor">
                     <p>El Voleibol es uno de mis deportes favoritos desarrollados ya más grande en la prepa; participé en varios torneos como 4 o colocador. Recuerdo mucho cuando jugábamos en otras prepas, estaba muy padre el ambiente y conseguí buenos amigos. La mejor parte es que después de jugar íbamos a comprar comida y nos saltábamos algunas clases por lo mismo.</p>
-                    <img src="https://images.unsplash.com/photo-1592656094267-764a451b5f9b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Imagen de voleibol">
+                    <img src="img/voly.jpg" alt="Imagen de voleibol">
                 </div>
             </div>
         </div>
