--- a/TheRafaMan06/pasatiemposver2/pasatiempo2.html
+++ b/TheRafaMan06/pasatiemposver2/pasatiempo2.html
@@ -114,16 +114,16 @@
         <label for="deporte">Elige una serie:</label>
         <select id="deporte" name="deporte" required>
         <option value="">-- Selecciona --</option>
-        <option value="futbol">Breaking Bad</option>
-        <option value="basquetbol">Friends</option>
-        <option value="beisbol">The Oficce</option>
-        <option value="tenis">Grey's Anatomy</option>
-        <option value="natacion">Stranger Things</option>
+        <option value="Breaking">Breaking Bad</option>
+        <option value="Firends">Friends</option>
+        <option value="Office">The Oficce</option>
+        <option value="Grey">Grey's Anatomy</option>
+        <option value="strangerS">Stranger Things</option>
         <option value="otro">Otro</option>
         </select><br>
 
         <label for="frecuencia">¿Cuántas horas ves series en un día?</label>
-        <input type="number" id="frecuencia" name="frecuencia" min="0" max="24"><br>
+        <input type="number" id="frecuencia" name="frecuencia" min="0" ><br>
 
         <label for="comentarios">Recomendaciones:</label>
         <textarea id="comentarios" name="comentarios" rows="4" placeholder="Recomiendame una serie..."></textarea><br>
