Finalización de pasatiempo 5 de estilo libre, agregado de imagenes, modificación al index de navegación y modificación a la hoja de estilos, pagina al 100%

--- a/aLe.php27/pasatiempos_v2/index.html
+++ b/aLe.php27/pasatiempos_v2/index.html
@@ -20,7 +20,7 @@
             <li class="liindex"><a class="aindex" href="pasatiempo1.html">Videojuegos</a></li>
             <li class="liindex"><a class="aindex" href="pasatiempo2.html">Musica</a></li>
             <li class="liindex"><a class="aindex" href="pasatiempo3.html">Series</a></li>
-            <li class="liindex"><a class="aindex" href="pasatiempo4.html">Psicologia</a></li>
+            <li class="liindex"><a class="aindex" href="pasatiempo4.html">Estilo libre</a></li>
             <li class="liindex"><a class="aindex" href="test.html">Test</a></li>
         </ul>
             <br><br>
