--- a/IlseOjeda/pasatiemposv2/gatos.html
+++ b/IlseOjeda/pasatiemposv2/gatos.html
@@ -42,6 +42,8 @@
 </table>
       </section>
     </article>
+  <br>
+  <embed src="cuidadogatos.pdf" type="">
   </main>
     <footer>
         <p>Desarrollado por Ilse Ojeda
