--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -38,8 +38,8 @@
             <h2>Links solicitados</h2>
             <ul>
                 <li><a href="pasatiemposv2/index.html">Página pasatiempos versión 2</a></li>
-                <li><a href="">Commits 27 de agosto</a></li>
-                <li><a href="">Commits 28 al 29 de agosto</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-27&until=2025-08-27">Commits 27 de agosto</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits?author=IlseOjeda&since=2025-08-28&until=2025-08-29">Commits 28 al 29 de agosto</a></li>
 
             </ul>
         </section>
